--- a/01-basics/01-CounterButtonApp/index.html
+++ b/01-basics/01-CounterButtonApp/index.html
@@ -10,6 +10,6 @@
       <button @click="handleReset" type="button">Reset</button>
     </div>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
